<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bdrx.docappc.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView android:src="@drawable/heart"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal" />

            <!-- Name -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_name_signUp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:hint="@string/text_name"
                    android:layout_height="50dp"
                    android:theme="@style/MyEditText" />

            </android.support.design.widget.TextInputLayout>

            <!-- Email -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_email_signUp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:hint="@string/text_email"
                    android:layout_height="50dp"
                    android:theme="@style/MyEditText" />

            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/dwn_gender_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_gender"
                app:met_floatingLabel="normal"
                android:textColorHint="@color/colorTxt"
                android:gravity="start"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <!-- Date -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_date_signUp"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:hint="@string/text_date"
                    android:layout_height="50dp"
                    android:theme="@style/MyEditText"
                    android:focusable="false"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Address -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_address_signUp"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:hint="@string/text_address"
                    android:scrollbars="vertical"
                    android:layout_height="120dp"
                    android:ems="10"
                    android:theme="@style/MyEditText" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_password_signUp"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:hint="@string/text_password"
                    android:layout_height="50dp"
                    android:theme="@style/MyEditText" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/in_RePassword_signUp"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:hint="@string/text_RePassword"
                    android:layout_height="50dp"
                    android:theme="@style/MyEditText" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_submit_signUp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:theme="@style/MyButton"
                android:text="@string/text_create_account"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:onClick="btn_submit_signUp_mtd"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
