<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bdrx.docappc.ForgetPassActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/logo_heart_FogetPass"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_FPass"
                android:textSize="20sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/in_email_FogetPass"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/text_email"
                android:theme="@style/MyEditText"/>

            <Button
                android:id="@+id/btn_submit_FogetPass"
                android:layout_marginTop="15dp"
                android:onClick="btn_submit_FogetPass_mtd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:theme="@style/MyButton"
                android:text="@string/text_submit"
                android:textSize="16sp"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
